[Backport] Set max width to avoid scroll on Firefox

--- a/app/styles/layout/kanban.scss
+++ b/app/styles/layout/kanban.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     height: $main-height;
     max-height: $main-height;
+    max-width: calc(100vw - 50px);
     header {
         min-height: 70px;
     }
